# experiment-builder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
expb/: __init__.py
expb/actions/: action.py
expb/datasets/: __init__.py  _actions.py  _builder.py  _dataset.py  _helpers.py  _typing.py  _utils.py  by.py  dataset.py  labeling_platform.py  metadata.py  utils.py
expb/experiments/: _helpers.py  experiment.py
notebooks/: sample.ipynb
tests/: datasets.py  test_datasets.py
